--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 }
 
 button {
+  float: left;
+  display: block;
   height: 80px;
   width: 80px;
   margin: 10px;
@@ -32,4 +34,19 @@ button {
     margin-left: 13px;
     text-indent: 99999px;
   }
+}
+
+.waveform {
+  display: block;
+  margin: 10px;
+  height: 80px;
+  background-color: purple;
+  overflow: hidden;
+}
+
+.playhead {
+  height: 100%;
+  background-color: black;
+  transition: height 0.05s ease;
+  opacity: 0.3;
 }
