--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -6,9 +6,12 @@
   margin: 0;
 }
 
-.player {
+.ubxd-player {
   margin: 1%;
-  width: 600px;
+}
+
+.player {
+  width: 100%;
   height: 100px;
   border: 1px solid #bbb;
   @include border-radius(5px);
@@ -24,15 +27,25 @@ button {
   border: 1px solid purple;
   @include border-radius(40px);
 
-  .play {
+  .play,
+  .pause {
     display: inline-block;
+    text-indent: 99999px;
+  }
+
+  .play {
     width: 0;
     height: 0;
     border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
     border-left: 35px solid purple;
     margin-left: 13px;
-    text-indent: 99999px;
+  }
+
+  .pause {
+    width: 35px;
+    height: 35px;
+    @include linear-gradient(to left, purple 0%, purple 33%, white 34%, white 66%, purple 67%, purple 100%);
   }
 }
 
