Draw a waveform to the canvass element
Fully fully mental! This currently seems to draw the waveform well although the lines are blurry (could this be because of using percentage widths over pixels? Also unsure quite how to work out true amplitude of the wave yet. So for now simply increase the multiplier

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -50,16 +50,24 @@ button {
 }
 
 .waveform {
+  position: relative;
   display: block;
   margin: 10px;
   height: 80px;
   background-color: purple;
   overflow: hidden;
-}
 
-.playhead {
-  height: 100%;
-  background-color: black;
-  transition: height 0.05s ease;
-  opacity: 0.3;
+  canvas {
+    width: 100%;
+    height: 100%;
+  }
+
+  .playhead {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-color: black;
+    transition: height 0.05s ease;
+    opacity: 0.3;
+  }
 }
