--- a/views/index.erb
+++ b/views/index.erb
@@ -6,12 +6,7 @@
 </head>
 <body>
 
-  <div class="ubxd-player">
-    <audio>
-      <p>Sorry, but your browser does not support the audio element currently. We suggest you try using Chrome or Safari.</p>
-      <source src="audio/azelia_banks-212.mp3" type="audio/mp3">
-    </audio>
-  </div>
+  <div class="ubxd-player" data-source="audio/azelia_banks-212.mp3"></div>
 
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="javascripts/players.js"></script>
