Fix audio visualisation
Percentage widths cause problems with rendering the canvas so se js to update it on screen resize
Also make sure to calculate the offset correctly based on the canvas height and then scale - drawing rectangles with min and max values seems to produce better results than simply drawing line points

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -26,6 +26,7 @@ button {
   background: transparent;
   border: 1px solid purple;
   @include border-radius(40px);
+  outline: none;
 
   .play,
   .pause {
@@ -57,11 +58,6 @@ button {
   background-color: purple;
   overflow: hidden;
 
-  canvas {
-    width: 100%;
-    height: 100%;
-  }
-
   .playhead {
     position: absolute;
     top: 0;
@@ -69,5 +65,6 @@ button {
     background-color: black;
     transition: height 0.05s ease;
     opacity: 0.3;
+    border-right: 1px solid white;
   }
 }
